# Homework-Web-12

./: main.py  pyproject.toml
src/database/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  contacts.py
src/schemas/: user.py
src/services/: auth.py
